cpp/test/Slice/errorDetection/IllegalIdentifier.ice
// Copyright (c) ZeroC, Inc.

module Test
{
    // Check that 'œ' is properly rejected in identifiers
    interface Œuvre
    {
        void cœur();
    }
}
